force-app/main/default/objects/Property__c/fields/Current_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate__c</fullName>
    <label>Current Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>