force-app/main/default/objects/Property__c/fields/How_to_Contact_you__c.field-meta.xml
<CustomField>
    <fullName>How_to_Contact_you__c</fullName>
    <label>How to Contact you/</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>