force-app/main/default/objects/Property__c/fields/Lucky_Number__c.field-meta.xml
<CustomField>
    <fullName>Lucky_Number__c</fullName>
    <label>Lucky Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>