force-app/main/default/objects/Property__c/fields/NewPrice__c.field-meta.xml
<CustomField>
    <fullName>NewPrice__c</fullName>
    <label>New Prices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>