force-app/main/default/objects/Property__c/validationRules/Value_Greater_Than_1000.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Greater_Than_1000</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &lt; 0 || Price__c &gt; 1000</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price is not valid</errorMessage>
</ValidationRule>